Fix scrolling overlap

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -37,6 +37,11 @@ h6 {
     font-weight: 700;
 }
 
+h1{
+    font-size: 2em;
+}
+
+
 hr.star-light,
 hr.star-primary {
     margin: 25px auto 30px;
@@ -176,12 +181,13 @@ header .intro-text .skills {
 }
 
 section {
-    padding: 100px 0;
+    padding-top: 30px;
+    padding-bottom: 40.5px;
 }
 
 section h2 {
     margin: 0;
-    font-size: 2em;
+    font-size: 1.25em;
 }
 
 section.success {
